--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@
 .icon-color{
     color: rgb(248, 232, 7);
 }
+@media only screen and (max-width: 990px) {
+    #marking-package{
+        top: -20px;
+    }
+    #hot-button{
+        left: 240px;
+    }
+    
+  }
+
